# DeepProstate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
deepprostate/: __init__.py  __main__.py  application.py  cli.py
deepprostate/adapters/image_conversion/: nifti_converter.py
deepprostate/core/domain/entities/: ai_analysis.py  medical_image.py  segmentation.py
deepprostate/core/domain/services/: ai_analysis_export_service.py  ai_analysis_persistence_service.py  ai_model_service.py  medical_image_cache_service.py  patient_browser_integration_service.py  segmentation_conversion_service.py  segmentation_overlay_service.py  slice_interpolation_service.py
deepprostate/core/domain/utils/: unified_orientation_handler.py
deepprostate/frameworks/infrastructure/coordination/: dialog_manager.py  dicom_loader.py  loading_interfaces.py  medical_format_registry.py  memory_manager.py  workflow_orchestrator.py
deepprostate/frameworks/infrastructure/data/: unified_data_loader.py
deepprostate/frameworks/infrastructure/di/: medical_service_container.py
deepprostate/frameworks/infrastructure/storage/: dicom_repository.py
deepprostate/frameworks/infrastructure/ui/: main_window.py
deepprostate/frameworks/infrastructure/ui/components/: medical_splash_screen.py
deepprostate/frameworks/infrastructure/ui/widgets/: ai_analysis_panel.py  image_information_panel.py  image_viewer_2d.py  manual_editing_panel.py  patient_browser.py  volume_viewer_3d.py
deepprostate/frameworks/infrastructure/utils/: logging_config.py  resources_path.py  secure_config.py  startup_validator.py
deepprostate/frameworks/infrastructure/visualization/: vtk_renderer.py
deepprostate/resources/: __init__.py
deepprostate/use_cases/application/services/: ai_analysis_orchestrator.py  ai_segmentation_service.py  image_services.py
src/adapters/image_conversion/: nifti_converter.py
src/core/domain/services/: ai_analysis_export_service.py  ai_analysis_persistence_service.py  ai_inference_service.py  ai_model_service.py  ai_preprocessing_service.py  batch_operation_service.py  dynamic_model_config_service.py  image_rendering_service.py  image_validation_service.py  mask_detection_service.py  medical_image_cache_service.py  multi_view_manager_service.py  patient_browser_integration_service.py  patient_data_management_service.py  patient_search_service.py  segmentation_conversion_service.py  segmentation_overlay_service.py  sequence_analysis_service.py
src/core/domain/utils/: medical_shape_handler.py  universal_mask_visualizer.py
src/deepprostate/shared/config/: ai_models_config.yaml  medical_imaging_config.yaml
src/frameworks/infrastructure/coordination/: common_image_format_handler.py  dicom_file_handler.py  dicom_format_handler.py  image_validator.py  medical_format_handler.py  medical_format_registry.py  metaimage_format_handler.py  nifti_format_handler.py  workflow_orchestrator.py
src/frameworks/infrastructure/data/: unified_data_loader.py
src/frameworks/infrastructure/di/: medical_service_container.py
src/frameworks/infrastructure/storage/: dicom_repository.py
src/frameworks/infrastructure/ui/: main_window.py
src/frameworks/infrastructure/ui/components/: common_controls.py  medical_dialogs.py  medical_panels.py
src/frameworks/infrastructure/ui/widgets/: ai_analysis_panel.py  collapsible_sidebar.py  image_information_panel.py  image_viewer_2d.py  patient_browser.py  volume_viewer_3d.py
src/frameworks/infrastructure/utils/: dicom_metadata_extractor.py  filesystem_validator.py
src/frameworks/infrastructure/visualization/: vtk_renderer.py
src/use_cases/application/: __init__.py
src/use_cases/application/services/: ai_analysis_orchestrator.py  ai_segmentation_service.py  image_services.py  segmentation_services.py
