[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepprostate"
version = "1.4.0"
description = "AI-powered medical imaging analysis for prostate MRI"
readme = "README.md"
authors = [
    {name = "Ronald Marca", email = "rnldmarca@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["medical-imaging", "prostate", "mri", "ai", "deep-learning", "nnunet"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "PyQt6>=6.4.0",
    "SimpleITK>=2.2.0",
    "vtk>=9.2.0",
    "qdarktheme>=2.1.0",
    "torch>=2.0.0",
    "nnunetv2>=2.2",
    "pydicom>=2.3.0",
    "scipy>=1.9.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
]

[project.urls]
Homepage = "https://github.com/Marquita-oss/DeepProstate"
Documentation = "https://DeepProstate.readthedocs.io"
Repository = "https://github.com/Marquita-oss/DeepProstate"
Issues = "https://github.com/Marquita-oss/DeepProstate/issues"

[project.scripts]
deepprostate = "deepprostate.cli:main"

[project.gui-scripts]
deepprostate-gui = "deepprostate.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepprostate*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
deepprostate = [
    "resources/**/*",
    "resources/icons/*.svg",
    "resources/icons/*.png",
    "resources/image/*.png",
    "resources/image/*.svg",
]
